fixed spacing mobile styling

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -36,44 +36,24 @@ body, html {
 /* Mobile styles */
 @media only screen and (max-width: 768px) {
   body, html {
-      flex-direction: column;
+      /* flex-direction: column; */
       justify-content: center;
-      padding: 1rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+  }
+
+  .App-card {
+    width: 100%;
+    margin: 2rem;
   }
 
   .card-container {
       flex-direction: column;
       width: 100%;
       height: auto;
-      margin: 2rem 0;
+      /* margin: 2rem 0; */
   }
 
-  .avatar {
-      width: 150px;
-      height: 150px;
-      margin: 1rem 0;
-  }
-
-  .text-container {
-      margin: 1rem 0;
-  }
-
-  .name {
-      font-size: 24px;
-  }
-
-  .title {
-      font-size: 16px;
-  }
-
-
-  .social a {
-      font-size: 25px;
-  }
-
-  .App-card {
-    width: 100%;
-  }
 }
 
 
