--- a/app/src/components/BusinessCard.css
+++ b/app/src/components/BusinessCard.css
@@ -33,3 +33,32 @@
   text-decoration: none;
 }
 
+/* Mobile styles */
+@media only screen and (max-width: 768px) {
+  .avatar {
+      width: 150px;
+      height: 150px;
+      margin: 1rem 0;
+  }
+
+  .text-container {
+      margin: 1rem 0;
+  }
+
+  .name {
+      font-size: 24px;
+  }
+
+  .title {
+      font-size: 16px;
+  }
+
+
+  .social a {
+      font-size: 25px;
+  }
+
+}
+
+
+
